anomaly-detection-k8s/applications/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: anomaly-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
      - name: frontend
        image: registry.gitlab.com/natuan12a03/anomaly-detection-app/anomaly-frontend:55df1b42d887d5e35bf567212d05821793446bc9
        ports:
        - containerPort: 80
